--- a/gb/21/8/25/n13186815.md
+++ b/gb/21/8/25/n13186815.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/gwrihu3930/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gwrihu3930/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gwrihu3930/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gwrihu3930/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gwrihu3930/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gwrihu3930/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>男子15岁时送婚戒 28年后和青梅竹马结婚</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13186854-shutterstock_110197514-600x400.jpg" />
 <h6>格雷姆在15岁时，送给他青梅竹马的恋人订婚戒指，并向她求婚。图为示意图。(Shutterstock)
 </h6>
 <hr>
-	<p>【大纪元2021年08月26日讯】（SWNS撰文／大纪元记者林瑰编译）一名男子在15岁时，送给他<ahref="https://github.com/gwrihu3930/djy/blob/master/gb/tag/%E9%9D%92%E6%A2%85%E7%AB%B9%E9%A9%AC.md#1">青梅竹马</a>的恋人订<ahref="https://github.com/gwrihu3930/djy/blob/master/gb/tag/%E5%A9%9A%E6%88%92.md#1">婚戒</a>指，并向她求婚。而在28年后他们才终于走到了一起，喜结良缘。</p>
+	<p>【大纪元2021年08月27日讯】（SWNS撰文／大纪元记者林瑰编译）一名男子在15岁时，送给他<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E9%9D%92%E6%A2%85%E7%AB%B9%E9%A9%AC.md#1">青梅竹马</a>的恋人订<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A9%9A%E6%88%92.md#1">婚戒</a>指，并向她求婚。而在28年后他们才终于走到了一起，喜结良缘。</p>
 <p>41岁的海伦·马歇尔（Helen Marshall）和42岁的格雷姆·理查森（Graeme Richardson）来自英国坎布里亚郡（Cumbria）的沃斯代尔（Wasdale）。两人在学校里相识，隔着走廊互相爱慕，在青少年时期坠入爱河。</p>
 <p>格雷姆很受女孩子们的欢迎，男孩子们也都喜欢海伦，但他们谁也没有勇气向对方提出约会。幸运的是，有一天，海伦的一个朋友和她打赌，如果她敢约格雷姆出去，就给她一块巧克力。</p>
 <p>“当她约我出去的时候，我真的很吃惊。”格雷姆说。</p>
 <p>当他们在湖区漫步，坐在风景如画的湖边时，浪漫之情从第一天就开始了，并最终发展为真爱。两人经过9个月的浪漫散步，在学校里跳迪斯科，以及偷偷在车棚后亲吻之后，年轻的格雷姆单膝跪地向她求婚。</p>
-<p>格雷姆为了给海伦买一枚<ahref="https://github.com/gwrihu3930/djy/blob/master/gb/tag/%E8%AE%A2%E5%A9%9A.md#1">订婚</a>钻戒，他在周末努力工作，每小时挣3英镑（合4.25美元)。</p>
+<p>格雷姆为了给海伦买一枚<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%AE%A2%E5%A9%9A.md#1">订婚</a>钻戒，他在周末努力工作，每小时挣3英镑（合4.25美元)。</p>
 <p>格雷姆说：“我在彭瑞斯（Penrith）金店的橱窗里看到那只钻戒，我就想买给海伦。”“我非常努力地工作，就是为攒钱买它。那是一大笔钱，但我现在记不清具体是多少了。”</p>
 <p>格雷姆的朋友当时认为他这么做是疯了，但格雷姆太爱海伦了，所以他毫不犹豫地就那么做了。</p>
 <p>然而，他们的父母担心他们两个太小了。</p>
 <p>1994年，格雷姆在50英里外的彭里斯上大学。他试图和海伦保持联系，每次他打电话都要走30分钟到电话亭。但当他打电话给海伦时，她经常外出或在做作业。而海伦给他写的信，全都石沉大海。再加上家人认为这对恋人还太年轻，不适合结婚。他们渐渐疏远了。</p>
-<p>海伦保存了这枚戒指，戴了好几年才把它藏在首饰盒里。她还给格雷姆买了一枚订<ahref="https://github.com/gwrihu3930/djy/blob/master/gb/tag/%E5%A9%9A%E6%88%92.md#1">婚戒</a>指，但不幸的是，它和那些信一起消失了。</p>
+<p>海伦保存了这枚戒指，戴了好几年才把它藏在首饰盒里。她还给格雷姆买了一枚订<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A9%9A%E6%88%92.md#1">婚戒</a>指，但不幸的是，它和那些信一起消失了。</p>
 <p>就像电影《恋恋不舍》中一样，他们的分手信从未到达对方手中，他们各自继续着自己的生活。</p>
 <p>两人都选择在自己的家乡养家糊口。海伦说：“我们住的地方相距三英里。我曾离开那里几年，但不超过五年。”</p>
 <p>从事护理工作的海伦结婚16年，有四个孩子——22岁的杰斯（Jess）、18岁的利奥（Leo）、12岁的玛莎（Martha）和8岁的南希（Nancy）。</p>
@@ -41,41 +41,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/20/2/27/n11900396.md#1">订婚钻戒秒消失 狗狗一脸心虚 不妙！在它肚子里？</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/20/12/21/n12635359.md#1">亚莉安娜与男友订婚 秀大钻戒甜喊forever</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/26/n13189326.md#1">“我很粗鲁”男子向餐厅员工道歉附百元小费</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/26/n13188942.md#1">美96岁老兵在棒球比赛中唱国歌 感动现场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/27/n11900396.md#1">订婚钻戒秒消失 狗狗一脸心虚 不妙！在它肚子里？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/12/21/n12635359.md#1">亚莉安娜与男友订婚 秀大钻戒甜喊forever</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683035.md#1">女企业家将平板拖车改成舒适之家 畅游美国</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13678249.md#1">孙子为奶奶建特殊之家 悉心照顾她直至去世</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/26/n10173051.md#1" target="_blank">艾以：音乐家陈歌辛的最后岁月</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/7/n10284211.md#1" target="_blank">中国良心教师们的故事（2）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/8/n10037691.md#1" target="_blank">天下收藏第一人张伯驹的悲喜人生（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488843.md#1" target="_blank">34国法轮功学员欧洲集会游行 英议员声援</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/22/n13180040.md#1">【未解之谜】首位被FBI公开的外星人</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/7/23/n13108843.md#1">【命理】一个人做了坏事欠债可以不还吗？</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/19/n13174434.md#1">【未解之谜】巨星“史泰龙”的前世今生</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/23/n13182744.md#1">女孩误吃大麻得重病 修大法后康复 解怨缘</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/22/n13179166.md#1">3岁儿子讲述前世记忆 英国喜剧演员吓坏了</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/26/n13190033.md#1">【直播】喀布尔机场外爆炸 白宫召开简报会</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/25/n13187810.md#1">【新闻看点】女子卖儿给医疗公司 背后黑幕曝光</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/26/n13189839.md#1">【微视频】孟晚舟判决前 小粉红传谣华为离开加国</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13183311.md#1">分析：马云是怎样令习近平“不高兴”的</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13184319.md#1">【拍案惊奇】汪洋掌权三迹象 杭州2.5万官员挨整</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13184158.md#1">哈士奇被遗弃路边 狂追主人车 结局超暖心</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13185191.md#1">43岁刘涛晒健身自拍 背后全身镜曝真实身材</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13185100.md#1">李英爱7旬夫近照曝光 冻龄外表就像才40岁</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/23/n13182574.md#1">黄晓明节目中罕见谈家事 直呼想添个女儿</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13185347.md#1">中共整肃“饭圈” 赵丽颖工作室被禁言15天</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/25/n13187964.md#1">孙俪：家人让我的表达能力提高了七成</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/24/n13184158.md#1">哈士奇被遗弃路边 狂追主人车 结局超暖心</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/14/n13161910.md#1">豆制品哪种最健康？营养师：1种千万少吃</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/25/n13186109.md#1">数以千计的“沙钱”冲上美国海滩 专家不解</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/25/n13186411.md#1">英女30年来上课1000次 始终无法考驾照</a></li>
-<li><a href="https://github.com/gwrihu3930/djy/blob/master/gb/21/8/20/n13174964.md#1">黑米可延缓老化、护眼 但你吃对了吗？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141250.md#1">蓬佩奥：香港无自治 不再保证获美特殊待遇</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140250.md#1">台加紧研发多种导弹 应对中共可能的攻台行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/28/n12144173.md#1">李克强称6亿人月收入千元 震惊不少网友</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12141717.md#1">美宣布香港无自治 川普将采取哪些行动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12140587.md#1">中共早就知晓疫情？美国夫妇忆武汉惊魂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12139000.md#1">欧阳娜娜演技遭负评 何炅打抱不平后又道歉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/26/n12138702.md#1">疫情下贝克汉姆近照曝光 头发稀疏秃顶明显</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/18/n12042366.md#1">灾难前神明托梦示警 信者免遭劫难</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/25/n12134403.md#1">“一鼓作气” 一场战争醒悟一生</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/4/10/n12019598.md#1">古典音乐之光——洪大的基奠，完美的结合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gwrihu3930/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gwrihu3930/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/25/n13186815.htm">男子15岁时送婚戒 28年后和青梅竹马结婚</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/25/n13186815.htm">男子15岁时送婚戒 28年后和青梅竹马结婚</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/gwrihu3930/djy/blob/master/gb/21/8/25/n13186815.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gwrihu3930/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gwrihu3930/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gwrihu3930/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gwrihu3930/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gwrihu3930/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/8/25/n13186815.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
